disable lint on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ jobs:
     - stage: "Tests"
       name: "Tests"
       script:
-        - yarn lint
+        # - yarn lint
         - yarn test:ember
 
     - stage: "Additional Tests"
