--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "keywords": [
     "ember-addon"
   ],
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/villander/ember-engines-router-service.git"
+  },
+  "authors": [
+    "Michael Villander"
+  ],
   "license": "MIT",
   "author": "",
   "directories": {
@@ -14,6 +20,7 @@
   },
   "scripts": {
     "build": "ember build --environment=production",
+    "changelog": "lerna-changelog",
     "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
@@ -24,7 +31,8 @@
   },
   "dependencies": {
     "ember-cli-babel": "^7.18.0",
-    "ember-cli-htmlbars": "^4.2.3"
+    "ember-cli-htmlbars": "^4.2.3",
+    "lerna-changelog": "^1.0.1"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
@@ -33,9 +41,9 @@
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "eager-blog": "link:./tests/dummy/lib/eager-blog",
+    "ember-auto-import": "^1.5.3",
     "ember-blog": "link:./tests/dummy/lib/ember-blog",
     "ember-chat": "link:./tests/dummy/lib/ember-chat",
-    "ember-auto-import": "^1.5.3",
     "ember-cli": "~3.17.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-inject-live-reload": "^2.0.2",
@@ -61,6 +69,16 @@
   },
   "engines": {
     "node": "10.* || >= 12"
+  },
+  "changelog": {
+    "repo": "villander/ember-engines-router-service",
+    "labels": {
+      "breaking": ":boom: Breaking Change",
+      "enhancement": ":rocket: Enhancement",
+      "bug": ":bug: Bug Fix",
+      "documentation": ":memo: Documentation",
+      "internal": ":house: Internal"
+    }
   },
   "ember": {
     "edition": "octane"
