--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
   },
   "dependencies": {
     "ember-cli-babel": "^7.18.0",
-    "ember-cli-htmlbars": "^4.2.3",
-    "lerna-changelog": "^1.0.1"
+    "ember-cli-htmlbars": "^4.2.3"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
@@ -63,6 +62,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-ember": "^7.10.1",
     "eslint-plugin-node": "^11.0.0",
+    "lerna-changelog": "^1.0.1",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
     "qunit-dom": "^1.1.0"
