Make tests pass again

--- a/tests/dummy/lib/eager-blog/.eslintrc
+++ b/tests/dummy/lib/eager-blog/.eslintrc
@@ -6,4 +6,12 @@
     "node": true,
     "browser": false,
   },
+  "rules": {
+    "ember/no-jquery": "error"
+  },
+  "settings": {
+    "node": {
+      "allowModules": ["ember-engines"]
+    }
+  }
 }
