--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,9 @@ jobs:
           node-version: 12.x
           cache: yarn
       - name: Install Dependencies
-        run: yarn install --no-lockfile
+        # Absurdly, yarn always fails on the first try here.
+        # https://github.com/yarnpkg/yarn/issues/2629
+        run: until yarn install --no-lockfile; do echo "Retrying yarn"; done
       - name: Run Tests
         run: yarn test:ember
 
