--- a/package.json
+++ b/package.json
@@ -60,11 +60,14 @@
     "ember-template-lint": "^2.4.0",
     "ember-try": "^1.4.0",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-ember": "^10.5.8",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "lerna-changelog": "^1.0.1",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.5.1",
     "qunit-dom": "^1.1.0"
   },
   "engines": {
