--- a/addon/package.json
+++ b/addon/package.json
@@ -31,33 +31,25 @@
     "build": "rollup --config",
     "prepublishOnly": "rollup --config",
     "start": "rollup --config --watch",
-    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
-    "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
-    "lint:hbs": "ember-template-lint .",
-    "lint:hbs:fix": "ember-template-lint . --fix",
-    "lint:js": "eslint . --cache",
-    "lint:js:fix": "eslint . --fix"
+    "lint": "eslint . --cache",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@embroider/addon-shim": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
+    "@babel/core": "^7.17.8",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-decorators": "^7.17.2",
+    "@babel/plugin-proposal-decorators": "^7.17.8",
     "@embroider/addon-dev": "^1.2.0",
     "@rollup/plugin-babel": "^5.3.1",
-    "babel-eslint": "^10.1.0",
-    "ember-template-lint": "^3.15.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-ember": "^10.5.8",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-ember": "^10.5.9",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-qunit": "^7.2.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.5.1",
-    "rollup": "^2.68.0"
+    "prettier": "^2.6.0",
+    "rollup": "^2.70.1"
   },
   "engines": {
     "node": "12.* || 14.* || >= 16"
