--- a/addon/package.json
+++ b/addon/package.json
@@ -9,15 +9,8 @@
     "type": "git",
     "url": "git+https://github.com/villander/ember-engines-router-service.git"
   },
-  "authors": [
-    "Michael Villander"
-  ],
   "license": "MIT",
   "author": "",
-  "directories": {
-    "doc": "doc",
-    "test": "tests"
-  },
   "exports": {
     ".": "./dist/addon-main.js",
     "./*": "./dist/*",
@@ -54,6 +47,12 @@
   "engines": {
     "node": "12.* || 14.* || >= 16"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
+  "authors": [
+    "Michael Villander"
+  ],
   "changelog": {
     "repo": "villander/ember-engines-router-service",
     "labels": {
