copy `*.md` files to addon via release-it hook
doing so, we ensure README.md and LICENSE.md are present in the addon folder
during release so they will get into tarball and get published to the npmjs.com

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-node_modules
+# dependencies
+node_modules/
+
+# *.md copies from release
+/addon/README.md
+/addon/LICENSE.md
+
+# misc
+npm-debug.log*
 yarn-error.log
 .DS_Store
