Drop Node.js 12 support
Node.js 12 was End Of Line last month on April 30, 2022

--- a/package.json
+++ b/package.json
@@ -53,5 +53,9 @@
       "tokenRef": "GITHUB_AUTH"
     },
     "npm": false
+  },
+  "volta": {
+    "node": "14.19.2",
+    "yarn": "1.22.18"
   }
 }
