--- a/addon/package.json
+++ b/addon/package.json
@@ -16,6 +16,13 @@
     "./*": "./dist/*",
     "./addon-main.js": "./addon-main.js"
   },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "types/*"
+      ]
+    }
+  },
   "files": [
     "addon-main.js",
     "dist",
@@ -23,28 +30,29 @@
   ],
   "scripts": {
     "build": "rollup --config",
-    "prepublishOnly": "rollup --config",
-    "start": "rollup --config --watch",
     "lint": "eslint . --cache",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "prepublishOnly": "rollup --config",
+    "start": "rollup --config --watch"
   },
   "dependencies": {
     "@embroider/addon-shim": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-decorators": "^7.17.8",
-    "@embroider/addon-dev": "^1.2.0",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@types/ember__routing": "^4.0.10",
-    "eslint": "^8.11.0",
+    "@babel/core": "^7.20.7",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.20.7",
+    "@embroider/addon-dev": "^3.0.0",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@types/ember__routing": "^4.0.12",
+    "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-ember": "^10.5.9",
+    "eslint-plugin-ember": "^11.3.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.6.0",
-    "rollup": "^2.70.1"
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.1",
+    "rollup": "^3.8.1"
   },
   "engines": {
     "node": "14.* || 16.* || >= 18"
@@ -77,11 +85,7 @@
       "./services/engine-router-service.js": "./dist/_app_/services/engine-router-service.js"
     }
   },
-  "typesVersions": {
-    "*": {
-      "*": [
-        "types/*"
-      ]
-    }
+  "volta": {
+    "extends": "../package.json"
   }
 }
