--- a/test-app/.gitignore
+++ b/test-app/.gitignore
@@ -24,4 +24,10 @@ test-app/node_modules
 # ember-try
 /.node_modules.ember-try/
 /bower.json.ember-try
+/npm-shrinkwrap.json.ember-try
 /package.json.ember-try
+/package-lock.json.ember-try
+/yarn.lock.ember-try
+
+# broccoli-debug
+/DEBUG/
