--- a/ember-engines-router-service/.prettierignore
+++ b/ember-engines-router-service/.prettierignore
@@ -4,22 +4,12 @@
 
 # compiled output
 /dist/
-/tmp/
 
 # dependencies
-/bower_components/
 /node_modules/
 
 # misc
 /coverage/
 !.*
-.*/
 .eslintcache
-
-# ember-try
-/.node_modules.ember-try/
-/bower.json.ember-try
-/package.json.ember-try
-
-# type definitions
-*.d.ts
+.lint-todo/
