--- a/ember-engines-router-service/package.json
+++ b/ember-engines-router-service/package.json
@@ -36,7 +36,7 @@
     "start": "rollup --config --watch"
   },
   "dependencies": {
-    "@embroider/addon-shim": "^1.2.0"
+    "@embroider/addon-shim": "^1.8.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
@@ -46,6 +46,7 @@
     "@embroider/addon-dev": "^3.0.0",
     "@rollup/plugin-babel": "^6.0.3",
     "@types/ember__routing": "^4.0.12",
+    "ember-cli-htmlbars": "^6.1.1",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-ember": "^11.3.1",
