--- a/package.json
+++ b/package.json
@@ -6,33 +6,33 @@
     "url": "https://github.com/villander/ember-engines-router-service"
   },
   "workspaces": [
-    "addon",
+    "ember-engines-router-service",
     "test-app"
   ],
   "scripts": {
-    "prepare": "cd addon && yarn build",
+    "prepare": "cd ember-engines-router-service && yarn build",
     "release": "release-it"
   },
   "devDependencies": {
-    "release-it": "^14.13.1",
-    "release-it-lerna-changelog": "^4.0.1",
-    "release-it-yarn-workspaces": "^2.0.1"
+    "release-it": "^15.5.1",
+    "@release-it-plugins/lerna-changelog": "^5.0.0",
+    "@release-it-plugins/workspaces": "^3.2.0"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
   "release-it": {
     "hooks": {
-      "before:init": "cp README.md LICENSE.md addon/"
+      "before:init": "cp README.md LICENSE.md ember-engines-router-service/"
     },
     "plugins": {
-      "release-it-lerna-changelog": {
+      "@release-it-plugins/lerna-changelog": {
         "infile": "CHANGELOG.md",
         "launchEditor": false
       },
-      "release-it-yarn-workspaces": {
+      "@release-it-plugins/workspaces": {
         "workspaces": [
-          "addon"
+          "ember-engines-router-service"
         ],
         "additionalManifests": {
           "dependencyUpdates": [
