--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@ node_modules/
 npm-debug.log*
 yarn-error.log
 .DS_Store
+
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
