--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "release": "release-it"
   },
   "devDependencies": {
-    "release-it": "^15.5.1",
     "@release-it-plugins/lerna-changelog": "^5.0.0",
-    "@release-it-plugins/workspaces": "^3.2.0"
+    "@release-it-plugins/workspaces": "^3.2.0",
+    "release-it": "^15.5.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
