--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,13 @@ node_modules/
 # misc
 npm-debug.log*
 yarn-error.log
-.DS_Store
+/.DS_Store
+
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
