--- a/package.json
+++ b/package.json
@@ -54,8 +54,5 @@
     },
     "npm": false
   },
-  "volta": {
-    "node": "14.21.2",
-    "yarn": "1.22.19"
-  }
+  "packageManager": "yarn@1.22.9"
 }
