--- a/ember-engines-router-service/package.json
+++ b/ember-engines-router-service/package.json
@@ -13,7 +13,10 @@
   "author": "",
   "exports": {
     ".": "./dist/addon-main.js",
-    "./*": "./dist/*",
+    "./*": {
+      "types": "./types/*.d.ts",
+      "default": "./dist/*.js"
+    },
     "./addon-main.js": "./addon-main.js"
   },
   "typesVersions": {
