--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,19 +19,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: yarn
+          cache: pnpm
 
       - name: Install Dependencies
-        run: until yarn install --frozen-lockfile; do echo "Retrying yarn"; done
+        run: until pnpm install --frozen-lockfile; do echo "Retrying pnpm"; done
 
       - name: Lint
-        run: yarn lint
+        run: pnpm lint
 
       - name: Run Tests
-        run: yarn test
+        run: pnpm test
 
   floating:
     name: "Floating Dependencies"
@@ -40,18 +41,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: yarn
+          cache: pnpm
 
       - name: Install Dependencies
-        # Absurdly, yarn always fails on the first try here.
-        # https://github.com/yarnpkg/yarn/issues/2629
-        run: until yarn install --no-lockfile; do echo "Retrying yarn"; done
+
+        run: until pnpm install --no-lockfile; do echo "Retrying pnpm"; done
 
       - name: Run Tests
-        run: yarn test
+        run: pnpm test
 
   try-scenarios:
     name: ${{ matrix.try-scenario }}
@@ -78,13 +79,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: yarn
+          cache: pnpm
 
       - name: Install Dependencies
-        run: until yarn install --frozen-lockfile; do echo "Retrying yarn"; done
+        run: until pnpm install --frozen-lockfile; do echo "Retrying pnpm"; done
 
       - name: Run Tests
         run: ./node_modules/.bin/ember try:one ${{ matrix.try-scenario }} --skip-cleanup
